tests/rosetta/out/Swift/a+b.error
swiftc: exit status 1
/tmp/a+b.swift:3:13: error: cannot find 'int' in scope
1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T12:26:10Z
2 | func main() {
3 |     let a = int(input())
  |             `- error: cannot find 'int' in scope
4 |     let b = int(input())
5 |     print(a + b)

/tmp/a+b.swift:3:17: error: cannot find 'input' in scope
1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T12:26:10Z
2 | func main() {
3 |     let a = int(input())
  |                 `- error: cannot find 'input' in scope
4 |     let b = int(input())
5 |     print(a + b)

/tmp/a+b.swift:4:13: error: cannot find 'int' in scope
2 | func main() {
3 |     let a = int(input())
4 |     let b = int(input())
  |             `- error: cannot find 'int' in scope
5 |     print(a + b)
6 | }

/tmp/a+b.swift:4:17: error: cannot find 'input' in scope
2 | func main() {
3 |     let a = int(input())
4 |     let b = int(input())
  |                 `- error: cannot find 'input' in scope
5 |     print(a + b)
6 | }
