tests/rosetta/out/Swift/a+b.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T13:15:31Z
func main() {
    let a = int(input())
    let b = int(input())
    print(a + b)
}
main()
